<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_GearIn" Id="{c5432545-a667-4bbc-b631-934f8166a6dc}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_GearIn :
STRUCT
  RatioNumerator  : REAL := 1.0; 
  RatioDenominator: UINT := 1; 
  Acceleration    : REAL;
  Deceleration    : REAL;
  Jerk            : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>