<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_In" Id="{c8cca1d6-78d8-432b-972d-92ead65cedaa}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_In :
STRUCT


  bFastStop         : BIT;  // Fast stop function of NC with mapped input

  {attribute 'hide'}
  b1 : BIT; // hide bit; for future use
  {attribute 'hide'}
  b2 : BIT; // hide bit; for future use
  {attribute 'hide'}
  b3 : BIT; // hide bit; for future use
  {attribute 'hide'}
  b4 : BIT; // hide bit; for future use
  {attribute 'hide'}
  b5 : BIT; // hide bit; for future use
  {attribute 'hide'}
  b6 : BIT;
  {attribute 'hide'}
  b7 : BIT;

  byAxisFuncPara    : BYTE; // additional parameter for Axis Function; e.g. used for AxisIndex on GearIn

  uiAxisFunctionReq : e_AxisFunction; // selected function for axis 

  (* LREAL required by process *)
  rSetPos           : LREAL;
  rSetVelo          : LREAL;
  rOverride         : LREAL;
  rAcc              : LREAL;
  rDec              : LREAL;
  iDirection        : INT;

  {attribute 'hide'}
  w1 : ARRAY[1..3] OF WORD;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>