<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MotionOptions" Id="{d66ca6ce-8c19-47ae-8c96-7c765a3c172e}">
    <Declaration><![CDATA[TYPE ST_MotionOptions :
STRUCT
  eBufferMode   : Tc2_MC2.MC_BufferMode;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>