<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_AXIS_GEAR_IN" Id="{b05209bc-e6ee-0b0b-2727-d74a5cf06134}">
    <Declaration><![CDATA[TYPE U_AXIS_GEAR_IN :
UNION

  stCtrl              : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF ST_GearIn;

{IF defined (AXIS_MAP)}
  {info 'U_AXIS_GEAR_IN mapping activated'}
  byCtrl    AT %I*    : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_GearIn)] OF BYTE;
{ELSE}
  byCtrl              : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_GearIn)] OF BYTE;
{END_IF}
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>