<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_AXIS_GEAR_IN_MULTIMASTER" Id="{9242e19c-9084-0120-28d4-07c8ca97b416}">
    <Declaration><![CDATA[TYPE U_AXIS_GEAR_IN_MULTIMASTER :
UNION

  stCtrl              : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF ST_GearInMultiMaster;

{IF defined (AXIS_MAP)}
  {info 'U_AXIS_GEAR_IN mapping activated'}
  byCtrl    AT %I*    : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_GearInMultiMaster)] OF BYTE;
{ELSE}
  byCtrl              : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_GearInMultiMaster)] OF BYTE;
{END_IF}
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>