<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_AXIS_HOMING" Id="{c4f2d899-daff-0b6a-2ac3-35530f4aabbb}">
    <Declaration><![CDATA[TYPE U_AXIS_HOMING :
UNION

  stCtrl              : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF ST_Homing;

{IF defined (AXIS_MAP)}
  {info 'U_AXIS_HOMING mapping activated'}
  byCtrl    AT %I*    : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_Homing)] OF BYTE;
{ELSE}
  byCtrl              : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_Homing)] OF BYTE;
{END_IF}
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>