<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_HomeParams" Id="{6207d6a3-779b-4344-8f4b-2135ee65b567}">
    <Declaration><![CDATA[TYPE ST_HomeParams :
STRUCT
  Position              : LREAL;
  HomingMode            : Tc2_MC2.MC_HomingMode;
  Options               : Tc2_MC2.ST_HomingOptions;
  InvertHomeSensor      : BIT := FALSE;   //Set to true, if the home sensor is normally closed.
  SimulateHomeSensor    : BIT := FALSE;   //Set to true, if the axis should be homed on encoder index only. The homing methode 'hardware sync' must be used then.
  UseLimitMin           : BIT := TRUE;    //Set to false, if there is no negative limit sensor.
  InvertLimitMin        : BIT := FALSE;   //Set to true, if the negative limit sensor is normally closed.
  HomeOnLimitMin        : BIT := FALSE;   //Set to true, if the negative limit sensor should be used for homing. 
  UseLimitMax           : BIT := TRUE;    //Set to false, if there is no positive limit sensor.
  InvertLimitMax        : BIT := FALSE;   //Set to true, if the positive limit sensor is normally closed.
  HomeOnLimitMax        : BIT := FALSE;   //Set to true, if the positive limit sensor should be used for homing. 
  
  // It is not allowed to use more than 1 of the 3 switches: SimulateHomeSensor, HomeOnLimitMin, HomeOnLimitMax
  
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>