<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4023.8">
  <DUT Name="ST_ReadParamParams" Id="{6706e047-85d6-4578-94f1-c1da3684b327}">
    <Declaration><![CDATA[TYPE ST_ReadParamParams :
STRUCT
	ParameterNumber	: Tc2_MC2.MC_AxisParameter;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>